# thehaskellbook

./: .gitignore
chp1/: chp1notes.md
chp10/: DatabaseProcessing.hs  RewritingFunctions.hs  UnderstandingFolds.hs  chp10notes.md
chp11/: AsPatterns.hs  BinaryTree.hs  Ciphers.hs  HuttonsRazor.hs  LanguageExercises.hs  LogicGoats.hs  Phone.hs  Programmer.hs  chp11notes.md
chp12/: EqCaseGuard.hs  IterateAndUnfoldr.hs  ItsOnlyNatural.hs  OtherThanList.hs  SmallLibraryForEither.hs  SmallLibraryForMaybe.hs  StringProcessing.hs  ValidateTheWord.hs  chp12notes.md
chp13/: Ciphers.hs  Forever.hs  GimmePerson.hs  chp13notes.md
chp13/hangman/: hangman.cabal
chp13/hangman/src/: Main.hs
chp13/hello/: hello.cabal
chp13/hello/exe/: Main.hs
chp13/hello/src/: DogsRule.hs  Hello.hs
chp14/: chp14notes.md
chp14/addition/: Addition.hs  QuickCheck.hs  RecursiveMul.hs  addition.cabal
chp14/exercises/: exercises.cabal
chp14/exercises/src/: Ciphers.hs  GenRandomGenerator.hs  HangmanTesting.hs  Idempotence.hs  NumbersIntoWords.hs  QuickCheck.hs  WordsIntoNumbers.hs
chp14/morse/: morse.cabal
chp14/morse/src/: Arbitrary.hs  Main.hs  Morse.hs
chp14/morse/tests/: tests.hs
chp15/: Check.hs  Failure.hs  Madness.hs  MaybeAnotherMonoid.hs  MonoidExercises.hs  OptionalMonoid.hs  ReusingAlgebras.hs  SemigroupExercises.hs  chp15notes.md
chp15/orphan-instance/: Listy.hs  ListyInstances.hs
chp16/: Either.hs  FuncInstances.hs  HeavyLifting.hs  IsValid.hs  Nat.hs  Possibly.hs  Rearrange.hs  ReplaceExperiment.hs  Written.hs  chp16notes.md  functors1.hs  functors2.hs  stack.yaml
chp17/: Apl1.hs  ApplicativeFunctions.hs  BadMonoid.hs  Combinations.hs  ConstantInstance.hs  EitherVariations.hs  FixerUpper.hs  IdentityInstance.hs  Instances.hs  ListApplicative.hs  Lookups.hs  TypeSpecializations.hs  ZipListApplicative.hs  chp17notes.md
chp18/: BadMonad.hs  EitherMonad.hs  EitherMonad2.hs  Kleisli.hs  MonadFunctions.hs  MonadInstances.hs  chp18notes.md
chp19/: chp19notes.md
chp19/url-shortener/: README.md  url-shortener.cabal
chp19/url-shortener/app/: Main.hs
chp2/: FunctionWithLet.hs  FunctionWithWhere.hs  chp2notes.md  heal_the_sick.hs  learn.hs  test.hs
chp20/: ChapterExercises.hs  LibraryFunctions.hs  chp20notes.md
chp21/: ChapterExercises.hs  SkiFree.hs  Tree.hs  chp21notes.md
chp22/: ANewBeginning.hs  Ask.hs  PrettyReader.hs  ReaderMonad.hs  ReaderPractice.hs  ReadingComprehension.hs  WarmingUp.hs  chp22notes.md
chp23/: ChapterExercises.hs  FizzBuzz.hs  RandomExample.hs  RandomExample2.hs  RollYourOwn.hs  WriteStateForYourself.hs  chp23notes.md
chp24/: AltParsing.hs  BT.hs  Fractions.hs  Ini.hs  LearnParsers.hs  Marshalling.hs  ParsingPractice.hs  Polymorphic.hs  Quasimodo.hs  chp24notes.md
chp25/: chp25notes.md
chp26/: EitherT.hs  OuterInner.hs  ReaderT.hs  StateT.hs  chp26notes.md  scotty.hs
chp27/: ChapterExercises.hs  CoreDump.hs  Evaluate.hs  ManualBang.hs  OutsideIn.hs  StrictList.hs  StrictTest1.hs  StrictTest2.hs  StrictTest3.hs  StrictTest4.hs  Trace.hs  chp27notes.md
chp28/: ApplicativeForms.hs  BS.hs  Bench.hs  Char8ProllyNotWhatYouWant.hs  Fusion.hs  Loci.hs  MapBench.hs  MemoryProfiling.hs  MutableVectors.hs  NF.hs  ProfilingTime.hs  SeqBench.hs  SetBench.hs  SlicingBench.hs  UpdateVector.hs  chp28notes.md
chp29/: IORefTrans.hs  TraceSharing.hs  WhatHappens.hs  chp29notes.md
chp3/: TopOrLocal.hs  chp3notes.md  functions2.hs  print2.hs  print3.hs  print3broken.hs  print3fixed.hs  print3flipped.hs  rvrs.hs
chp30/: AsyncExceptions.hs  OurExceptions.hs  StoppingTheParty.hs  WhySomeException.hs  chp30notes.md
chp31/: chp31notes.md
chp31/fingerd/: finger.db  fingerd.cabal
chp31/fingerd/src/: Debug.hs  Main.hs
chp4/: chp4notes.md  greetIfCool1.hs  greetIfCool2.hs
chp5/: DetermineTheType.hs  arith3broken.hs  chp5notes.md  sing.hs  sing2.hs
chp6/: MatchTheTypes.hs  TypeKwonDo.hs  bad_example.hs  chp6notes.md  datatypes.hs  dates.hs  eq_instances.hs  identity.hs
chp7/: Arith4.hs  LetsWriteCode.hs  arith2.hs  chp7notes.md  employeeRank.hs  greetIfCool3.hs  matchingTuples1.hs  registeredUser1.hs  registeredUser2.hs  scoping.hs  wherePenguinsLive.hs
chp8/: McCarthy91.hs  WordNumber.hs  brokenMaybe1.hs  chp8notes.md  dividedBy.hs
chp9/: Cipher.hs  DataChar.hs  StandardFunctions.hs  ThyFearfulSymmetry.hs  chp9notes.md  enumFromTo.hs
