name:                addition
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chicken Little
maintainer:          sky@isfalling.org
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable addition
  hs-source-dirs:      .
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , spec
