name:                exercises
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ying Wang
maintainer:          me@yingw787.com
copyright:           2019 Ying Wang
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    NumbersIntoWords
                    , QuickCheck
                    , Idempotence
                    , GenRandomGenerator
                    , HangmanTesting
                    , Ciphers
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , containers
                    , QuickCheck
  hs-source-dirs:     src
  default-language:   Haskell2010
