name:                fingerd
version:             0.1.0.0
synopsis:            Simple project template
homepage:            https://github.com/yingw787
license:             BSD3
license-file:        LICENSE
author:              Ying Wang
maintainer:          me@yingw787.com
copyright:           2020 Ying Wang
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable debug
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              Debug.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , network

executable fingerd
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , network
                      , raw-strings-qq
                      , sqlite-simple
                      , text
